Improve mobile chat experience
